--- a/pages/sample/colorscheme-orangecounty.html
+++ b/pages/sample/colorscheme-orangecounty.html
@@ -5,98 +5,117 @@ permalink: "sample/colorscheme-orangecounty.html"
 colorscheme: "/css/colorscheme-orangecounty.css"
 ---
 
-
 <div class="container p-t-md">
- <nav aria-label="You are here">
-  <ol class="breadcrumb">
-   <li><a href="../index.html" title="Home page">Home</a></li>
-   <li><a href="color-schemes.html" title="Color schemes landing page">Color Schemes</a></li>
-   <li class="active">Orange County</li>
-  </ol>
- </nav>
-</div>
-<div class="section">
- <!-- Content Demonstration -->
- <div class="container">
-  <h1>Orange County Theme</h1>
-  <h2>Theme Main Colors</h2>
-
-  <div class="group m-b-lg text-center font-size-14">
-   <div class="quarter">
-    <div class="outer m-auto width-80">
-     <div class="height-80 shadow" style="border:1px solid #c18f36;background-color:#e59c1a;">
-      <div class="color" style="background-color:#fbad23;"></div>
-     </div>
-    </div>
-    <div class="caption">
-     <h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #fbad23<br>RGB: 251,173,35
-    </div>
-   </div>
-   <div class="quarter">
-    <div class="outer m-auto width-80">
-     <div class="height-80 shadow" style="border:1px solid #6c491f;background-color:#824c0b;">
-      <div class="color" style="background-color:#A15801;"></div>
-     </div>
-    </div>
-    <div class="caption">
-     <h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #A15801<br />RGB: 161,88,1
-    </div>
-   </div>
-
-   <div class="quarter">
-    <div class="outer m-auto width-80">
-     <div class="height-80 shadow" style="border:1px solid #26201a;background-color:#372b1c;">
-      <div class="color" style="background-color:#483723;"></div>
-     </div>
-    </div>
-    <div class="caption">
-     <h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #483723<br />RGB: 50,58,69
-    </div>
-   </div>
-   <div class="quarter">
-    <div class="outer m-auto width-80">
-     <div class="height-80 shadow" style="border:1px solid #c0bcb2;background-color:#e8e4da;">
-      <div class="color" style="background-color:#f1ede4;"></div>
-     </div>
-    </div>
-    <div class="caption">
-     <h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f1ede4<br />RGB: 225,242,247
-    </div>
-   </div>
+ <div class="row">
+  <div class="col-md-3" role="complementary">
+   <!-- Side navigation -->
+   <nav aria-label="List of color schemes">
+    <h3 class="h4 m-t-0">Color Schemes</h3>
+    <ul class="list-navigation">
+     <li><a href="/sample/colorscheme-delta.html">Delta theme</a></li>
+     <li><a href="/sample/colorscheme-eureka.html">Eureka theme</a></li>
+     <li><a href="/sample/colorscheme-mono.html">Mono theme</a></li>
+     <li><a href="/sample/colorscheme-oceanside.html">Oceanside theme</a></li>
+     <li class="active"><a href="/sample/colorscheme-orangecounty.html">Orange County theme</a></li>
+     <li><a href="/sample/colorscheme-pasorobles.html">Paso Robles theme</a></li>
+     <li><a href="/sample/colorscheme-sacramento.html">Sacramento theme</a></li>
+     <li><a href="/sample/colorscheme-santabarbara.html">Santa Barbara theme</a></li>
+     <li><a href="/sample/colorscheme-santacruz.html">Santa Cruz theme</a></li>
+     <li><a href="/sample/colorscheme-shasta.html">Shasta theme</a></li>
+     <li><a href="/sample/colorscheme-sierra.html">Sierra theme</a></li>
+     <li><a href="/sample/colorscheme-trinity.html">Trinity theme</a></li>
+    </ul>
+   </nav>
   </div>
+  <div class="col-md-9">
+   <nav aria-label="You are here">
+    <ol class="breadcrumb">
+     <li><a href="../index.html" title="Home page">Home</a></li>
+     <li><a href="color-schemes.html" title="Color schemes landing page">Color Schemes</a></li>
+     <li class="active">Orange County</li>
+    </ol>
+   </nav>
 
+   <h1>Orange County Theme</h1>
+   <h2>Theme Main Colors</h2>
 
-  <div class="card card-understated">
-   <div class="card-heading">
-    <h2 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h2>
+   <div class="group m-b-lg text-center font-size-14">
+    <div class="quarter">
+     <div class="outer m-auto width-80">
+      <div class="height-80 shadow" style="border:1px solid #c18f36;background-color:#e59c1a;">
+       <div class="color" style="background-color:#fbad23;"></div>
+      </div>
+     </div>
+     <div class="caption">
+      <h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #fbad23<br>RGB: 251,173,35
+     </div>
+    </div>
+    <div class="quarter">
+     <div class="outer m-auto width-80">
+      <div class="height-80 shadow" style="border:1px solid #6c491f;background-color:#824c0b;">
+       <div class="color" style="background-color:#A15801;"></div>
+      </div>
+     </div>
+     <div class="caption">
+      <h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #A15801<br />RGB: 161,88,1
+     </div>
+    </div>
+
+    <div class="quarter">
+     <div class="outer m-auto width-80">
+      <div class="height-80 shadow" style="border:1px solid #26201a;background-color:#372b1c;">
+       <div class="color" style="background-color:#483723;"></div>
+      </div>
+     </div>
+     <div class="caption">
+      <h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #483723<br />RGB: 50,58,69
+     </div>
+    </div>
+    <div class="quarter">
+     <div class="outer m-auto width-80">
+      <div class="height-80 shadow" style="border:1px solid #c0bcb2;background-color:#e8e4da;">
+       <div class="color" style="background-color:#f1ede4;"></div>
+      </div>
+     </div>
+     <div class="caption">
+      <h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f1ede4<br />RGB: 225,242,247
+     </div>
+    </div>
    </div>
-   <div class="card-body">
-    <p>
-     There are two ways to customize theme main colors. One way is to change primary and
-     secondary theme color variables
-     in the colorscheme-[yourcolorshceme].scss file. This method will require you to
-     re-compile the state template, you
-     can find instructions in the readme file. After the compilation you will have updated
-     colorscheme-[yourcolorshceme].css file.
-    </p>
 
-    <p>
-     Another way is to manually find and replace all main theme colors and their variations
-     in colorscheme-[yourcolorshceme].css.
-     Main theme colors classes will be listed at the top of the CSS file. You can copy their
-     values and use find/replace feature
-     in your web editor software to replace all those colors references with your custom
-     colors throughout entire css file.
-    </p>
 
-    <p>
-     <span class="badge label-primary">Note:</span> <span class="font-size-sm"> Before changing
-      your colors make sure that your custom theme colors have sufficient color cotrast
-      ratios.</span>
-    </p>
+   <div class="card card-understated">
+    <div class="card-heading">
+     <h2 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h2>
+    </div>
+    <div class="card-body">
+     <p>
+      There are two ways to customize theme main colors. One way is to change primary and
+      secondary theme color variables
+      in the colorscheme-[yourcolorshceme].scss file. This method will require you to
+      re-compile the state template, you
+      can find instructions in the readme file. After the compilation you will have updated
+      colorscheme-[yourcolorshceme].css file.
+     </p>
+
+     <p>
+      Another way is to manually find and replace all main theme colors and their variations
+      in colorscheme-[yourcolorshceme].css.
+      Main theme colors classes will be listed at the top of the CSS file. You can copy their
+      values and use find/replace feature
+      in your web editor software to replace all those colors references with your custom
+      colors throughout entire css file.
+     </p>
+
+     <p>
+      <span class="badge label-primary">Note:</span> <span class="font-size-sm"> Before changing
+       your colors make sure that your custom theme colors have sufficient color cotrast
+       ratios.</span>
+     </p>
+    </div>
    </div>
+
   </div>
-
  </div>
 </div>
 
