--- a/pages/sample/index.html
+++ b/pages/sample/index.html
@@ -40,6 +40,7 @@ layout: page.njk
    <li><a href="progress-bars.html">Progress Bars</a></li>
    <li><a href="progress-blocks.html">Progress Blocks</a></li>
    <li><a href="socialsharer.html">SocialSharer</a></li>
+   <li><a href="step-list.html">Step List</a></li>
    <li><a href="tabs.html">Tabs</a></li>
    <li><a href="tables.html">Tables</a></li>
    <li><a href="timeline.html">Timeline</a></li>
