Renamed badge to tex-highlight and replaced badges with text-highlight class #272

--- a/pages/sample/colorscheme-orangecounty.html
+++ b/pages/sample/colorscheme-orangecounty.html
@@ -109,7 +109,7 @@ colorscheme: "/css/colorscheme-orangecounty.css"
      </p>
 
      <p>
-      <span class="badge label-primary">Note:</span> <span class="font-size-sm"> Before changing
+      <span class="text-highlight-primary">Note:</span> <span class="font-size-sm"> Before changing
        your colors make sure that your custom theme colors have sufficient color cotrast
        ratios.</span>
      </p>
