--- a/pages/sample/index.html
+++ b/pages/sample/index.html
@@ -402,7 +402,7 @@ permalink: "/sample/index.html"
  code.
 </p>
 <p>
- <span class="badge label-primary">NOTE:</span> When using custom components and
+ <span class="text-highlight-primary">NOTE:</span> When using custom components and
  content
  modules that are not documented as part of the State Template, migration to future
  versions
