--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -63,7 +63,7 @@ permalink: "sample/lists.html"
    <code>.accordion-list</code> in conjunction with any list style provided.
   </p>
 
-  <p><span class="badge label-primary">Note:</span> Accordion List uses HTML5 roles, some ARIA
+  <p><span class="text-highlight-primary">Note:</span> Accordion List uses HTML5 roles, some ARIA
    properties, and IDs for accessibility. For best accessibility paractices certain keyboard
    shortcuts are also implemented.</p>
 
