--- a/pages/sample/page-navigation.html
+++ b/pages/sample/page-navigation.html
@@ -35,7 +35,8 @@ permalink: "sample/page-navigation.html"
    left. People can select a link to go directly to H2 section. The links are usually introduced by the text "On this
    page". Page navigation makes it easy to see what content is available.</p>
 
-  <p><span class="badge label-primary">Note:</span> The page navigation should not show if there are zero or one H2’s on
+  <p><span class="text-highlight-primary">Note:</span> The page navigation should not show if there are zero or one H2’s
+   on
    the page.</p>
 
   <h2>Example:</h2>
