--- a/pages/sample/primary-banner.html
+++ b/pages/sample/primary-banner.html
@@ -25,5 +25,5 @@ permalink: "sample/primary-banner.html"
 <pre>&lt;main&gt; <br>&lt;!-- Include Banner --&gt;
 &#10100;% include "../../src/_includes/modules/<strong>header-large-banner.html</strong>" %&#10101;
 &#10100;% include "../../src/_includes/modules/<strong>header-primary-banner.html</strong>" %&#10101;</pre>
-<p><span class="badge label-primary">Note:</span> You can view the source code for each banner type by
+<p><span class="text-highlight-primary">Note:</span> You can view the source code for each banner type by
  downloading the template package and inspecting the template files or using the links below.</p>
