--- a/pages/sample/structure-global-footer.html
+++ b/pages/sample/structure-global-footer.html
@@ -141,7 +141,8 @@ permalink: "sample/structure-global-footer.html"
        </p>
        <pre><code>&#123;% include "src/_includes/global-footer.njk" %&#125;</code></pre>
 
-       <p><span class="badge label-primary">Note:</span> Path to the include will be relative to the directory of your
+       <p><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the directory of
+        your
         page.</p>
       </div>
      </div>
