--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -122,7 +122,8 @@ permalink: "sample/structure-mobile-controls.html"
        <p>Add Mobile Controls <code>njk</code> include code after Site Header content:</p>
        <pre><code>&#123;% include "src/_includes/mobile-controls.njk" %&#125;</code></pre>
 
-       <p><span class="badge label-primary">Note:</span> Path to the include will be relative to the directory of your
+       <p><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the directory of
+        your
         page.</p>
       </div>
      </div>
