--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -140,7 +140,8 @@ permalink: "sample/structure-search.html"
  </code></pre>
 
 
-       <p><span class="badge label-primary">Note:</span> Path to the include will be relative to the directory of your
+       <p><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the directory of
+        your
         page.</p>
       </div>
      </div>
@@ -246,7 +247,8 @@ permalink: "sample/structure-search.html"
 </div></code></pre>
 
 
-       <p><span class="badge label-primary">Note:</span> Path to the include will be relative to the directory of your
+       <p><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the directory of
+        your
         page.</p>
       </div>
      </div>
