--- a/pages/sample/text-accent.html
+++ b/pages/sample/text-accent.html
@@ -23,3 +23,27 @@ permalink: "sample/text-accent.html"
     </pre>
  </div>
 </div>
+
+
+<div class="row">
+ <div class="half">
+  <h2>Text Highlight</h2>
+  <p>Use <code>text-highlight</code> class to highlight a word or text portion. Also, to specify the text highlight's
+   color
+   use following classes: </p>
+  <ul>
+   <li><code>text-highlight</code></li>
+   <li><code>text-highlight-primary</code></li>
+   <li><code>text-highlight-warning</code></li>
+   <li><code>text-highlight-dark</code></li>
+  </ul>
+  <h2>Examples:</h2>
+  {% include "../../src/_includes/modules/text-highlight.html" %}
+
+ </div>
+ <div class="half">
+  <h2>Source Code:</h2>
+  <pre class="section-default"><code>{% include "../../src/_includes/modules/text-highlight.html" %}</code>
+    </pre>
+ </div>
+</div>
