--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@ permalink: "about.html"
     href="https://github.com/Office-of-Digital-Innovation/California-State-Template" target="_blank">GitHub
     Repository</a>.</p>
 
-  <p><span class="badge label-primary">Note:</span> You will be able to download each version using
+  <p><span class="text-highlight-primary">Note:</span> You will be able to download each version using
    the GitHub repository links. Look for the &quot;Clone or Download&quot; button on the
    respective GitHub page.</p>
   <p>&nbsp;</p>
