--- a/pages/sample/css-units.html
+++ b/pages/sample/css-units.html
@@ -115,7 +115,7 @@ permalink: "sample/css-units.html"
  code.
 </p>
 <p>
- <span class="badge label-primary">NOTE:</span> When using custom components and
+ <span class="text-highlight-primary">NOTE:</span> When using custom components and
  content
  modules that are not documented as part of the State Template, migration to future
  versions
