--- a/pages/sample/structure-settings.html
+++ b/pages/sample/structure-settings.html
@@ -122,7 +122,8 @@ permalink: "sample/structure-settings.html"
        </p>
        <pre><code>&#123;% include "src/_includes/settings-bar.njk" %&#125;</code></pre>
 
-       <p><span class="badge label-primary">Note:</span> Path to the include will be relative to the directory of your
+       <p><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the directory of
+        your
         page.</p>
       </div>
      </div>
