--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -129,7 +129,8 @@ permalink: "sample/structure-utility-header.html"
        </p>
        <pre><code>&#123;% include "src/_includes/utility-header.njk" %&#125;</code></pre>
 
-       <p><span class="badge label-primary">Note:</span> Path to the include will be relative to the directory of your
+       <p><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the directory of
+        your
         page.</p>
       </div>
      </div>
