--- a/pages/sample/testimonials.html
+++ b/pages/sample/testimonials.html
@@ -31,7 +31,7 @@ permalink: "sample/testimonials.html"
 
 <h2>Thumnail Right Aligned:</h2>
 {% include "../../src/_includes/modules/testimonial-danger.html" %}
-<p><span class="badge label-primary">Note:</span> The source order for <code>.thumbnail</code> and
+<p><span class="text-highlight-primary">Note:</span> The source order for <code>.thumbnail</code> and
  <code>.testimonial-body</code> have been reversed. Source order is important when using this
  component with this configuration.
 </p>
