Fixed the text in accordion pages

--- a/pages/sample/accordions2.html
+++ b/pages/sample/accordions2.html
@@ -14,7 +14,7 @@ permalink: "/sample/accordions2.html"
 
 
 <h2>Demo</h2>
-<h3 class="m-t-0">Basic Accordion</h3>
+<h3 class="m-t-0">Basic accordion</h3>
 
 
 
@@ -126,7 +126,7 @@ permalink: "/sample/accordions2.html"
     <h4 class="my-0">
      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
       aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source Code tab header">
-      Source cde
+      Source code
      </a>
     </h4>
    </div>
