--- a/pages/sample/accordions.html
+++ b/pages/sample/accordions.html
@@ -117,7 +117,7 @@ permalink: "/sample/accordions.html"
    </div>
    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
     <div class="card-body">
-     <h3 id="basic" class="m-t">Basic accodion</h3>
+     <h3 id="basic" class="m-t">Basic accordion</h3>
      <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/accordion.html" %}</code>
     </pre>
 
