Fixed featured card image display order in mobile #220

--- a/pages/sample/feature-card.html
+++ b/pages/sample/feature-card.html
@@ -25,20 +25,8 @@ permalink: "sample/feature-card.html"
  <li>Button</li>
 </ul>
 
-<h2 id="when-and-how-to-use-it">When and how to use it</h2>
-<p>Use the feature card to catch visitors' attention and highlight the top task or need.</p>
-<p>We recommend always using a feature card on your homepage. Place it at the top of the homepage so it appears below
- the statewide header, site header, and site navigation. The only other thing that may appear above the feature card is
- a page alert.</p>
-<p>Include a concise title, description, image, and one button. Choose an image that’s in harmony with your brand
- identity, mission, and tone. The minimum image size is 776 x 517 pixels. For best results, use images with this aspect
- ratio.</p>
-<h3 id="how-not-to-use-it">How not to use it</h3>
-<p>Do not use more than one feature card on your homepage.</p>
-<p>Do not use the feature card to make an image carousel. Carousels frustrate people more than they help them and do not
- meet accessibility standards.</p>
-<p>Do not put a lot of content in your feature card. Too much content is hard to read. It will also lengthen the feature
- card and cause awkward whitespace.</p>
+
+
 <h2 id="demo-and-sample-markup">Demo and sample markup</h2>
 
 
@@ -99,3 +87,20 @@ permalink: "sample/feature-card.html"
  </div>
 </div>
 <!--END TABS-->
+
+
+<h2 id="when-and-how-to-use-it">Usage</h2>
+<h3>When and how to use it</h3>
+<p>Use the feature card to catch visitors' attention and highlight the top task or need.</p>
+<p>We recommend always using a feature card on your homepage. Place it at the top of the homepage so it appears below
+ the statewide header, site header, and site navigation. The only other thing that may appear above the feature card is
+ a page alert.</p>
+<p>Include a concise title, description, image, and one button. Choose an image that’s in harmony with your brand
+ identity, mission, and tone. The minimum image size is 776 x 517 pixels. For best results, use images with this aspect
+ ratio.</p>
+<h3 id="how-not-to-use-it">How not to use it</h3>
+<p>Do not use more than one feature card on your homepage.</p>
+<p>Do not use the feature card to make an image carousel. Carousels frustrate people more than they help them and do not
+ meet accessibility standards.</p>
+<p>Do not put a lot of content in your feature card. Too much content is hard to read. It will also lengthen the feature
+ card and cause awkward whitespace.</p>
