--- a/pages/structure.html
+++ b/pages/structure.html
@@ -32,8 +32,8 @@ permalink: "structure.html"
 
 
 
-  <h1 class="mt-lg-0">State Web Template Strucutral Components</h1>
-  <h2>Web Page Structure</h2>
+  <h1 class="mt-lg-0">Structure</h1>
+  <h2>Web page structure</h2>
   <p>
    The image below shows the basic structure of a State Template web page, consisting of various
    elements and building blocks. In our case Nunjucks Includes (njk) are used as our webpage
@@ -114,7 +114,7 @@ permalink: "structure.html"
   </div><!-- / End Modal -->
 
 
-  <h2>Strucutral Components</h2>
+  <h2>Strucutral components</h2>
 
 
   <div class="row">
@@ -126,7 +126,7 @@ permalink: "structure.html"
       <img src="/images/components/icon-utility.jpg" alt="Utility Header component illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">Utility Header</h3>
+      <h3 class="h5 m-t-0">Utility header</h3>
       <p class="font-size-16 color-black">Utility Header is the top most content bar in the template header area that
        contains the
        CA.gov logo, setting button and utility links
@@ -158,7 +158,7 @@ permalink: "structure.html"
       <img src="/images/components/icon-header.jpg" alt="Site Header component illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">Site Header</h3>
+      <h3 class="h5 m-t-0">Site header</h3>
       <p class="font-size-16 color-black">The Site Header contains the site name and logo
       </p>
      </div>
@@ -178,7 +178,7 @@ permalink: "structure.html"
       <img src="/images/components/icon-mobile.jpg" alt="Mobile Controls component illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">Mobile Controls</h3>
+      <h3 class="h5 m-t-0">Mobile controls</h3>
       <p class="font-size-16 color-black">Mobile Controls are the search and navigation toggle buttons that expand and
        collapse
        search
@@ -211,7 +211,7 @@ permalink: "structure.html"
       <img src="/images/components/icon-navigation.jpg" alt="Site Navigation component illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">Site Navigation</h3>
+      <h3 class="h5 m-t-0">Site navigation</h3>
       <p class="font-size-16 color-black">Site Navigation contains links and dropdown menus at the top of every page
        that let people
        move around the site
@@ -232,7 +232,7 @@ permalink: "structure.html"
       <img src="/images/components/icon-footer.jpg" alt="Global Footer component illustration" class="img-fluid">
      </div>
      <div class="p-a">
-      <h3 class="h5 m-t-0">Global Footer</h3>
+      <h3 class="h5 m-t-0">Global footer</h3>
       <p class="font-size-16 color-black">The Global Footer contains customizable links and social media icons at the
        bottom of all
        pages
