Added bottom margin to the link-grid items #221

--- a/pages/sample/link-grid.html
+++ b/pages/sample/link-grid.html
@@ -12,17 +12,7 @@ permalink: "sample/link-grid.html"
  single column.</p>
 
 
-<h2 id="when-and-how-to-use-it">When and how to use it</h2>
-<p>Use the link grid to highlight the top things people need. Organize the links in a way that makes sense for people’s
- primary needs.</p>
-<p>The link grid is typically used on the homepage of a site so visitors can find and get to useful content quickly.</p>
-<p>Only use the link grid if you have two or more links to add to it.</p>
-<h3 id="how-not-to-use-it">How not to use it</h3>
-<p>Avoid using more than 9 links. The link grid is intended to highlight the most important content. The recommended
- maximum grid size is 3 rows by 3 columns.</p>
-<p>Because the grid collapses into one column on mobile, large grids may occupy several screens. This can hide lower
- links.</p>
-<h2 id="demo-and-sample-markup">Demo and sample markup</h2>
+<h2 id="demo">Demo and sample markup</h2>
 
 
 <!--TABS-->
@@ -50,7 +40,7 @@ permalink: "sample/link-grid.html"
     </h4>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-lg">
+    <div class="card-body p-b-lg p-t-lg">
      {% include "../../src/_includes/modules/link-grid.html" %}
     </div>
    </div>
@@ -80,3 +70,17 @@ permalink: "sample/link-grid.html"
  </div>
 </div>
 <!--END TABS-->
+<h2 id="usage">Usage</h2>
+<h3>When and how to use it</h3>
+<p>Use the link grid to highlight the top things people need. Organize the links in a way that makes sense for people’s
+ primary needs.</p>
+<p>The link grid is typically used on the homepage of a site so visitors can find and get to useful content quickly.</p>
+<p>Only use the link grid if you have two or more links to add to it.</p>
+<h3 id="how-not-to-use-it">How not to use it</h3>
+<p>Avoid using more than 9 links. The link grid is intended to highlight the most important content. The recommended
+ maximum grid size is 3 rows by 3 columns.</p>
+<p>Because the grid collapses into one column on mobile, large grids may occupy several screens. This can hide lower
+ links.</p>
+
+<h2 id="Accessibility">Accessibility</h2>
+{% include "../../src/_includes/modules/accessibility.html" %}
